New primitive types marshaller