@@ -4,6 +4,8 @@ import org.junit.jupiter.api.Test;
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.Duration;
 import java.util.Arrays;
 
@@ -12,60 +14,86 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 class JacksonDynamicPropertyMarshallerTest {
     private JacksonDynamicPropertyMarshaller marshaller = new JacksonDynamicPropertyMarshaller();
 
-    private static final String USER_JSON = "{\"name\":\"pretty name\",\"email\":{\"value\":\"test@mail.ua\"}," +
-            "\"phones\":[88005553535,11111111111],\"sessionDuration\":\"PT1S\"}";
+    @Test
+    public void marshallPrimitiveTypes() {
+        assertPrimitivesMarshalling("1", "1");
+        assertPrimitivesMarshalling(1, "1");
+        assertPrimitivesMarshalling(1L, "1");
+        assertPrimitivesMarshalling(Byte.parseByte("1"), "1");
+        assertPrimitivesMarshalling(new BigDecimal("1.1"), "1.1");
+        assertPrimitivesMarshalling(BigInteger.valueOf(11L), "11");
+        assertPrimitivesMarshalling(false, "false");
+        assertPrimitivesMarshalling(true, "true");
+        assertPrimitivesMarshalling(1.1D, "1.1");
+        assertPrimitivesMarshalling(1.F, "1.0");
+        assertPrimitivesMarshalling(Duration.ofMinutes(1), "PT1M");
+        assertPrimitivesMarshalling(Paths.get("my-file.txt"), "my-file.txt");
+        assertPrimitivesMarshalling(
+                Paths.get("my-file.txt").toAbsolutePath(),
+                Paths.get("my-file.txt").toAbsolutePath().toString());
+    }
 
-    private static final User USER = new User("pretty name", new Email("test@mail.ua"),
-            Arrays.asList(BigInteger.valueOf(88005553535L), BigInteger.valueOf(11111111111L)), Duration.ofSeconds(1));
-
+    @Test
+    public void unmarshallPrimitiveTypes() {
+        assertPrimitivesUnmarshalling("1", "1");
+        assertPrimitivesUnmarshalling("1", 1);
+        assertPrimitivesUnmarshalling("1", 1L);
+        assertPrimitivesUnmarshalling("1", (byte) 1);
+        assertPrimitivesUnmarshalling("1.1", new BigDecimal("1.1"));
+        assertPrimitivesUnmarshalling("11", BigInteger.valueOf(11L));
+        assertPrimitivesUnmarshalling("false", false);
+        assertPrimitivesUnmarshalling("true", true);
+        assertPrimitivesUnmarshalling("1.1", 1.1D);
+        assertPrimitivesUnmarshalling("1.1", 1.1F);
+        assertPrimitivesUnmarshalling("PT1M", Duration.ofMinutes(1));
+        assertPrimitivesUnmarshalling("my-file.txt", Paths.get("my-file.txt"));
+        assertPrimitivesUnmarshalling("/some/dir/my-file.txt", Paths.get("/some/dir/my-file.txt"));
+    }
 
     @Test
     public void marshallAndUnmarshallPrimitiveTypes_shouldBeEqual() {
-        assertPrimitives("1", String.class);
-        assertPrimitives(1, Integer.class);
-        assertPrimitives(1L, Long.class);
-        assertPrimitives(new Byte("1"), Byte.class);
-        assertPrimitives(new BigDecimal("1.1"), BigDecimal.class);
-        assertPrimitives(BigInteger.valueOf(11L), BigInteger.class);
-        assertPrimitives(false, Boolean.class);
-        assertPrimitives(true, Boolean.class);
-        assertPrimitives(1.1D, Double.class);
-        assertPrimitives(1.F, Float.class);
-        assertPrimitives(Duration.ofMinutes(1), Duration.class);
+        assertPrimitivesMarshallAndUnmarshall("1", String.class);
+        assertPrimitivesMarshallAndUnmarshall(1, Integer.class);
+        assertPrimitivesMarshallAndUnmarshall(1L, Long.class);
+        assertPrimitivesMarshallAndUnmarshall(Byte.parseByte("1"), Byte.class);
+        assertPrimitivesMarshallAndUnmarshall(new BigDecimal("1.1"), BigDecimal.class);
+        assertPrimitivesMarshallAndUnmarshall(BigInteger.valueOf(11L), BigInteger.class);
+        assertPrimitivesMarshallAndUnmarshall(false, Boolean.class);
+        assertPrimitivesMarshallAndUnmarshall(true, Boolean.class);
+        assertPrimitivesMarshallAndUnmarshall(1.1D, Double.class);
+        assertPrimitivesMarshallAndUnmarshall(1.F, Float.class);
+        assertPrimitivesMarshallAndUnmarshall(Duration.ofMinutes(1), Duration.class);
+        assertPrimitivesMarshallAndUnmarshall(Paths.get("my-file.txt"), Path.class);
+        assertPrimitivesMarshallAndUnmarshall(Paths.get("my-file.txt").toAbsolutePath(), Path.class);
+    }
+    private void assertPrimitivesMarshalling(Object object, String target) {
+        String value = marshaller.marshall(object);
+        assertEquals(target, value);
     }
 
-
-    @Test
-    public void unmarshallPrimitiveTypesFromString_shouldBeEqual() {
-
-        System.out.println(Duration.ofMinutes(1));
-
-        assertPrimitivesFromString("1", "1");
-        assertPrimitivesFromString("1", 1);
-        assertPrimitivesFromString("1", 1L);
-        assertPrimitivesFromString("1", (byte) 1);
-        assertPrimitivesFromString("1.1", new BigDecimal("1.1"));
-        assertPrimitivesFromString("11", BigInteger.valueOf(11L));
-        assertPrimitivesFromString("false", false);
-        assertPrimitivesFromString("true", true);
-        assertPrimitivesFromString("1.1", 1.1D);
-        assertPrimitivesFromString("1.1", 1.1F);
-        assertPrimitivesFromString("PT1M", Duration.ofMinutes(1));
-
-    }
-
-
-    private void assertPrimitivesFromString(String source, Object target) {
+    private void assertPrimitivesUnmarshalling(String source, Object target) {
         Object value = marshaller.unmarshall(source, target.getClass());
         assertEquals(target, value);
     }
 
-    private <T> void assertPrimitives(T sourceValue, Class<T> clazz) {
+    private <T> void assertPrimitivesMarshallAndUnmarshall(T sourceValue, Class<T> clazz) {
         String serialize = marshaller.marshall(sourceValue);
         T deserialize = marshaller.unmarshall(serialize, clazz);
-
         assertEquals(sourceValue, deserialize);
     }
+
+    private static final String USER_JSON = "" +
+            "{" +
+            "\"name\":\"pretty name\"," +
+            "\"email\":{" +
+            "\"value\":\"test@mail.ua\"" +
+            "}," +
+            "\"phones\":[88005553535,11111111111]," +
+            "\"sessionDuration\":\"PT1S\"" +
+            "}";
+
+    private static final User USER = new User("pretty name", new Email("test@mail.ua"),
+            Arrays.asList(BigInteger.valueOf(88005553535L), BigInteger.valueOf(11111111111L)), Duration.ofSeconds(1));
 
     @Test
     public void marshallAndUnmarshallComplexObject_shouldBeEqual() {
